--- a/training.automation.appium/packages.config
+++ b/training.automation.appium/packages.config
@@ -1,14 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net461" />
-  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="BoDi" version="1.4.1" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="Gherkin" version="6.0.0" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.10.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.6" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
-  <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
-  <package id="SpecFlow.Tools.MsBuild.Generation" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow" version="3.0.199" targetFramework="net461" />
+  <package id="SpecFlow.NUnit" version="3.0.199" targetFramework="net461" />
+  <package id="SpecFlow.NUnit.Runners" version="3.0.199" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="3.0.199" targetFramework="net461" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net461" />
 </packages>
